--- a/ExClient/ExClient.csproj
+++ b/ExClient/ExClient.csproj
@@ -132,7 +132,7 @@
     <Compile Include="Api\ApiRequest.cs" />
     <Compile Include="HostType.cs" />
     <Compile Include="ImageLoadingState.cs" />
-    <Compile Include="Internal\RangedCollectionView{T}.cs" />
+    <Compile Include="Collections\RangedCollectionView{T}.cs" />
     <Compile Include="Internal\TokenExtension.cs" />
     <Compile Include="Internal\UriProvider.cs" />
     <Compile Include="Language.cs" />
@@ -174,7 +174,7 @@
     <Compile Include="SearchResultBase.cs" />
     <Compile Include="Settings\ExcludedLanguagesSettingProvider.cs" />
     <Compile Include="Settings\HahProxySettingProvider.cs" />
-    <Compile Include="IncrementalLoadingCollection{T}.cs" />
+    <Compile Include="Collections\IncrementalLoadingCollection{T}.cs" />
     <Compile Include="Helpers\IOHelper.cs" />
     <Compile Include="ObservableObject.cs" />
     <Compile Include="Models\GalleryDb.cs" />
