Icons for secondary commands; search term parser
Former-commit-id: 49ae88e5d51b5e0eeac1f4d6babc40d73120f468 [formerly c707adbf55894189784a4b9c02f4a22ad9f42612]
Former-commit-id: f77d2032ae6d334566b9314c8744c8c0dc0a6cbd

--- a/ExClient/ExClient.csproj
+++ b/ExClient/ExClient.csproj
@@ -123,6 +123,7 @@
     <Compile Include="ConnectionStrategy.cs" />
     <Compile Include="FavoriteCategory.cs" />
     <Compile Include="FavoriteCollection.cs" />
+    <Compile Include="Internal\FavoriteCollectionNames.cs" />
     <Compile Include="FavoritesSearchResult.cs" />
     <Compile Include="GalleryImagePlaceHolder.cs" />
     <Compile Include="Helpers\AsyncWarpper.cs" />
@@ -210,7 +211,12 @@
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\ApplicationDataManager\ApplicationDataManager.csproj">
+      <Project>{33ccbcb8-8709-4c6c-ad59-e156f1e04fd0}</Project>
+      <Name>ApplicationDataManager</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
