better input prediction
Former-commit-id: d35e3f8d13b870be76cd3bcb5f3eea9e905de7da [formerly 443c867ecacc2dd4e7edc46ad69eeb1f9055780c]
Former-commit-id: 21d2371ff570fb077b147107ea49b11565c5058d

--- a/ExViewer/ExViewer.csproj
+++ b/ExViewer/ExViewer.csproj
@@ -164,6 +164,7 @@
     </Compile>
     <Compile Include="UriHandler.cs" />
     <Compile Include="VersionChecker.cs" />
+    <Compile Include="ViewModels\AutoCompletion.cs" />
     <Compile Include="ViewModels\CachedVM.cs" />
     <Compile Include="ViewModels\CacheStorage{TKey,TCache}.cs" />
     <Compile Include="ViewModels\FavoritesVM.cs" />
@@ -172,7 +173,6 @@
     <Compile Include="ViewModels\PopularVM.cs" />
     <Compile Include="ViewModels\SavedVM.cs" />
     <Compile Include="ViewModels\GalleryVM.cs" />
-    <Compile Include="ViewModels\SearchingParser\Parser.cs" />
     <Compile Include="ViewModels\SearchResultVM{T}.cs" />
     <Compile Include="ViewModels\SearchVM.cs" />
     <Compile Include="Controls\AboutControl.xaml.cs">
