batch actions for favotites
Former-commit-id: 60b0e9b60e1272add4845a122490c8946f67d264 [formerly e0479ef2930f15cc35de949e611d660a25ec2a30]
Former-commit-id: 0ca26ed57a8cd30413a95599b2edaf8312a8a06a

--- a/ExViewer/ExViewer.csproj
+++ b/ExViewer/ExViewer.csproj
@@ -150,6 +150,7 @@
       <DependentUpon>20170327142247_MigrationReset.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\SearchHistoryDbModelSnapshot.cs" />
+    <Compile Include="NavigationManager.cs" />
     <Compile Include="Settings\SettingCollection.cs" />
     <Compile Include="Settings\SettingsHelper.cs" />
     <Compile Include="Settings\StatusCollection.cs" />
