--- a/ExClient/project.json
+++ b/ExClient/project.json
@@ -4,8 +4,8 @@
     "Microsoft.EntityFrameworkCore.Sqlite": "1.1.1",
     "Microsoft.EntityFrameworkCore.Tools": "1.1.0",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.3.3",
-    "MvvmLightLibs": "5.3.0",
     "Newtonsoft.Json": "10.0.2",
+    "Opportunity.MvvmUniverse": "0.1.2",
     "System.ValueTuple": "4.3.0"
   },
   "frameworks": {
