--- a/ApplicationDataManager/project.json
+++ b/ApplicationDataManager/project.json
@@ -1,7 +1,7 @@
 ﻿{
   "dependencies": {
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.3.3",
-    "MvvmLightLibs": "5.3.0"
+    "Opportunity.MvvmUniverse": "0.1.2"
   },
   "frameworks": {
     "uap10.0": {}
