--- a/ExViewer/project.json
+++ b/ExViewer/project.json
@@ -6,9 +6,8 @@
     "Microsoft.EntityFrameworkCore.Tools": "1.1.0",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.3.3",
     "Microsoft.Toolkit.Uwp.UI.Controls": "1.4.1",
-    "MvvmLight": "5.3.0",
-    "MvvmLightLibs": "5.3.0",
-    "Opportunity.Converters": "1.0.9"
+    "Opportunity.Converters": "1.0.9",
+    "Opportunity.MvvmUniverse": "0.1.2"
   },
   "frameworks": {
     "uap10.0": {}
