--- a/ApplicationDataManager/ApplicationDataManager.csproj
+++ b/ApplicationDataManager/ApplicationDataManager.csproj
@@ -125,6 +125,7 @@
       <DependentUpon>DefaultTemplateProvider.xaml</DependentUpon>
     </Compile>
     <Compile Include="Settings\SettingTemplateSelector.cs" />
+    <Compile Include="Strings\Strings.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Properties\ApplicationDataManager.rd.xml" />
