--- a/ExClient/ExClient.csproj
+++ b/ExClient/ExClient.csproj
@@ -184,6 +184,7 @@
     <Compile Include="Settings\SettingCollection.cs" />
     <Compile Include="Settings\SettingProvider.cs" />
     <Compile Include="Settings\ExcludedTagNamespacesSettingProvider.cs" />
+    <Compile Include="Strings\LocalizedStrings.cs" />
     <Compile Include="Tag.cs" />
     <Compile Include="TagCollection.cs" />
     <Compile Include="TorrentInfo.cs" />
