--- a/ExViewer/ExViewer.csproj
+++ b/ExViewer/ExViewer.csproj
@@ -153,6 +153,7 @@
     <Compile Include="Settings\SettingCollection.cs" />
     <Compile Include="Settings\SettingsHelper.cs" />
     <Compile Include="Settings\StatusCollection.cs" />
+    <Compile Include="Strings\Strings.cs" />
     <Compile Include="Telemetry.cs" />
     <Compile Include="Themes\ThemeExtention.cs" />
     <Compile Include="Themes\ThemeHelperControl.xaml.cs">
