set as background
Former-commit-id: b0768cae21622a3cbd8f74b93e708bd2ac1a3e2a [formerly 9077f3295e83f688e135f99c7f0179f3f49f8c9d]
Former-commit-id: 5896b4812970f06534464d48732db80811df4260

--- a/ExViewer/ExViewer.csproj
+++ b/ExViewer/ExViewer.csproj
@@ -282,6 +282,9 @@
     <Content Include="Images\Light\UserBackground.scale-100.png" />
     <Content Include="Images\Light\UserBackground.scale-200.png" />
     <Content Include="Images\Light\UserBackground.scale-400.png" />
+    <Content Include="Images\Settings.scale-100.png" />
+    <Content Include="Images\Settings.scale-200.png" />
+    <Content Include="Images\Settings.scale-400.png" />
     <Content Include="Images\MicrosoftEdge.scale-200.png" />
     <Content Include="Images\MicrosoftEdge.scale-400.png" />
     <Content Include="Images\MicrosoftEdge.scale-100.png" />
