--- a/ExClient/ExClient.csproj
+++ b/ExClient/ExClient.csproj
@@ -152,7 +152,6 @@
     <Compile Include="Client-Forum.cs" />
     <Compile Include="Comment.cs" />
     <Compile Include="Helpers\HtmlHelper.cs" />
-    <Compile Include="Internal\ImageHandle.cs" />
     <Compile Include="Internal\MyHttpClient.cs" />
     <Compile Include="Internal\RedirectFilter.cs" />
     <Compile Include="Migrations\20160717022029_MyFirstMigration.cs" />
@@ -183,7 +182,7 @@
     <Compile Include="Settings\SettingCollection.cs" />
     <Compile Include="Settings\SettingProvider.cs" />
     <Compile Include="Settings\ExcludedTagNamespacesSettingProvider.cs" />
-    <Compile Include="Strings\LocalizedStrings.cs" />
+    <Compile Include="Strings\LocalizedStrings.g.cs" />
     <Compile Include="Tag.cs" />
     <Compile Include="TagCollection.cs" />
     <Compile Include="TorrentInfo.cs" />
