--- a/ExClient/ExClient.csproj
+++ b/ExClient/ExClient.csproj
@@ -111,29 +111,33 @@
     <PRIResource Include="Strings\zh-hans\Namespace.resjson" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AdvancedSearchOptions.cs" />
+    <Compile Include="Galleries\Metadata\LanguageModifier.cs" />
+    <Compile Include="Galleries\Metadata\LanguageName.cs" />
+    <Compile Include="Galleries\Metadata\LanguageNameExtension.cs" />
+    <Compile Include="Search\AdvancedSearchOptions.cs" />
     <Compile Include="Api\ApiResponse.cs" />
-    <Compile Include="Api\CommentRequest.cs" />
+    <Compile Include="Api\Commenting.cs" />
     <Compile Include="Api\GalleryData.cs" />
     <Compile Include="Api\GalleryInfo.cs" />
     <Compile Include="Api\GalleryToken.cs" />
     <Compile Include="Api\ImageInfo.cs" />
-    <Compile Include="CachedGallery.cs" />
-    <Compile Include="CommentCollection.cs" />
+    <Compile Include="Galleries\CachedGallery.cs" />
+    <Compile Include="Commenting\CommentCollection.cs" />
+    <Compile Include="Commenting\CommentStatus.cs" />
     <Compile Include="ConnectionStrategy.cs" />
     <Compile Include="FavoriteCategory.cs" />
     <Compile Include="FavoriteCollection.cs" />
     <Compile Include="Internal\FavoriteCollectionNames.cs" />
-    <Compile Include="FavoritesSearchResult.cs" />
-    <Compile Include="GalleryImagePlaceHolder.cs" />
+    <Compile Include="Search\FavoritesSearchResult.cs" />
+    <Compile Include="Galleries\GalleryImagePlaceHolder.cs" />
     <Compile Include="Helpers\MathHelper.cs" />
-    <Compile Include="GalleryList{T}.cs" />
+    <Compile Include="Galleries\GalleryList{T}.cs" />
     <Compile Include="Api\ApiRequest.cs" />
     <Compile Include="HostType.cs" />
-    <Compile Include="ImageLoadingState.cs" />
+    <Compile Include="Galleries\ImageLoadingState.cs" />
     <Compile Include="Internal\TokenExtension.cs" />
     <Compile Include="Internal\UriProvider.cs" />
-    <Compile Include="Language.cs" />
+    <Compile Include="Galleries\Metadata\Language.cs" />
     <Compile Include="Launch\FavoritesSearchHandler.cs" />
     <Compile Include="Launch\GalleryHandler.cs" />
     <Compile Include="Launch\GalleryImageHandler.cs" />
@@ -145,12 +149,13 @@
     <Compile Include="Launch\UriHandler.cs" />
     <Compile Include="Launch\UriHandlerData.cs" />
     <Compile Include="Launch\UriHelper.cs" />
-    <Compile Include="Namespace.cs" />
-    <Compile Include="PopularCollection.cs" />
-    <Compile Include="RevisionCollection.cs" />
-    <Compile Include="SavedGallery.cs" />
+    <Compile Include="Settings\ExcludedLanguage.cs" />
+    <Compile Include="Tagging\Namespace.cs" />
+    <Compile Include="Search\PopularCollection.cs" />
+    <Compile Include="Galleries\Metadata\RevisionCollection.cs" />
+    <Compile Include="Galleries\SavedGallery.cs" />
     <Compile Include="Client-Forum.cs" />
-    <Compile Include="Comment.cs" />
+    <Compile Include="Commenting\Comment.cs" />
     <Compile Include="Helpers\HtmlHelper.cs" />
     <Compile Include="Internal\MyHttpClient.cs" />
     <Compile Include="Internal\RedirectFilter.cs" />
@@ -164,10 +169,10 @@
     <Compile Include="Category.cs" />
     <Compile Include="Client.cs" />
     <Compile Include="Helpers\ConnectionHelper.cs" />
-    <Compile Include="DictionaryExtention.cs" />
-    <Compile Include="GalleryImage.cs" />
-    <Compile Include="SaveGalleryProgress.cs" />
-    <Compile Include="SearchResultBase.cs" />
+    <Compile Include="Helpers\DictionaryExtention.cs" />
+    <Compile Include="Galleries\GalleryImage.cs" />
+    <Compile Include="Galleries\SaveGalleryProgress.cs" />
+    <Compile Include="Search\SearchResultBase.cs" />
     <Compile Include="Settings\ExcludedLanguagesSettingProvider.cs" />
     <Compile Include="Settings\HahProxySettingProvider.cs" />
     <Compile Include="Helpers\IOHelper.cs" />
@@ -177,15 +182,17 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Client-Search.cs" />
     <Compile Include="ReCaptcha.cs" />
-    <Compile Include="SearchResult.cs" />
-    <Compile Include="Gallery.cs" />
+    <Compile Include="Search\SearchResult.cs" />
+    <Compile Include="Galleries\Gallery.cs" />
     <Compile Include="Settings\SettingCollection.cs" />
     <Compile Include="Settings\SettingProvider.cs" />
     <Compile Include="Settings\ExcludedTagNamespacesSettingProvider.cs" />
     <Compile Include="Strings\LocalizedStrings.g.cs" />
-    <Compile Include="Tag.cs" />
-    <Compile Include="TagCollection.cs" />
-    <Compile Include="TorrentInfo.cs" />
+    <Compile Include="Tagging\NamespaceExtention.cs" />
+    <Compile Include="Tagging\NamespaceTagCollection.cs" />
+    <Compile Include="Tagging\Tag.cs" />
+    <Compile Include="Tagging\TagCollection.cs" />
+    <Compile Include="Galleries\Metadata\TorrentInfo.cs" />
     <Compile Include="Launch\UriLauncher.cs" />
     <Content Include="Properties\ExClient.rd.xml" />
     <PRIResource Include="Strings\en\Namespace.resjson" />
