--- a/ExViewer/project.json
+++ b/ExViewer/project.json
@@ -1,7 +1,7 @@
 ﻿{
   "dependencies": {
     "HockeySDK.UWP": "4.1.6",
-    "HtmlAgilityPack": "1.4.9.5",
+    "HtmlAgilityPack": "1.5.0-beta5",
     "JyAnalytics": "1.0.10",
     "Microsoft.EntityFrameworkCore.Sqlite": "1.1.2",
     "Microsoft.EntityFrameworkCore.Tools": "1.1.1",
