--- a/ApplicationDataManager/ApplicationDataManager.csproj
+++ b/ApplicationDataManager/ApplicationDataManager.csproj
@@ -107,6 +107,7 @@
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
     <None Include="project.json" />
     <None Include="Strings\Strings.resgenconfig" />
+    <PRIResource Include="Strings\zh-hant\Resources.resJson" />
     <PRIResource Include="Strings\zh-hans\Resources.resJson" />
     <PRIResource Include="Strings\en\Resources.resJson" />
   </ItemGroup>
