--- a/ExClient/ExClient.csproj
+++ b/ExClient/ExClient.csproj
@@ -170,6 +170,8 @@
     <Compile Include="Launch\UriHandlerData.cs" />
     <Compile Include="Launch\UriHelper.cs" />
     <Compile Include="Search\FileSearchResult.cs" />
+    <Compile Include="Search\KeywordSearchResult.cs" />
+    <Compile Include="Search\SearchResult.cs" />
     <Compile Include="Settings\ExcludedLanguage.cs" />
     <Compile Include="SHA1Value.cs" />
     <Compile Include="Tagging\Namespace.cs" />
@@ -189,7 +191,6 @@
     <Compile Include="Helpers\DictionaryExtention.cs" />
     <Compile Include="Galleries\GalleryImage.cs" />
     <Compile Include="Galleries\SaveGalleryProgress.cs" />
-    <Compile Include="Search\SearchResultBase.cs" />
     <Compile Include="Settings\ExcludedLanguagesSettingProvider.cs" />
     <Compile Include="Settings\HahProxySettingProvider.cs" />
     <Compile Include="Helpers\IOHelper.cs" />
@@ -199,7 +200,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Client-Search.cs" />
     <Compile Include="ReCaptcha.cs" />
-    <Compile Include="Search\SearchResult.cs" />
     <Compile Include="Galleries\Gallery.cs" />
     <Compile Include="Settings\SettingCollection.cs" />
     <Compile Include="Settings\SettingProvider.cs" />
