--- a/ExClient/ExClient.csproj
+++ b/ExClient/ExClient.csproj
@@ -124,7 +124,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Api\Tagging.cs" />
-    <Compile Include="Api\VoteCommand.cs" />
+    <Compile Include="Api\VoteState.cs" />
     <Compile Include="Galleries\Metadata\LanguageModifier.cs" />
     <Compile Include="Galleries\Metadata\LanguageName.cs" />
     <Compile Include="Galleries\Metadata\LanguageNameExtension.cs" />
