--- a/ExClient/ExClient.csproj
+++ b/ExClient/ExClient.csproj
@@ -128,6 +128,7 @@
     <Compile Include="Galleries\Metadata\LanguageModifier.cs" />
     <Compile Include="Galleries\Metadata\LanguageName.cs" />
     <Compile Include="Galleries\Metadata\LanguageNameExtension.cs" />
+    <Compile Include="HentaiVerseInfo.cs" />
     <Compile Include="Migrations\20170612052132_NewMig.cs" />
     <Compile Include="Migrations\20170612052132_NewMig.designer.cs">
       <DependentUpon>20170612052132_NewMig.cs</DependentUpon>
@@ -179,7 +180,7 @@
     <Compile Include="Search\PopularCollection.cs" />
     <Compile Include="Galleries\Metadata\RevisionCollection.cs" />
     <Compile Include="Galleries\SavedGallery.cs" />
-    <Compile Include="Client-Forum.cs" />
+    <Compile Include="Client-User.cs" />
     <Compile Include="Commenting\Comment.cs" />
     <Compile Include="Helpers\HtmlHelper.cs" />
     <Compile Include="Internal\MyHttpClient.cs" />
